# FMR

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/discord_api/: messages.rs  mod.rs  request.rs
src/models/: discord.rs
src/tests/: Fakes.rs  mod.rs
src/tests/data/: msgs.json
src/utils/: config.rs  last_month_date.rs  message_body_builder.rs  mod.rs
