[package]
name = "fnuef-meme-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
futures-io = { version = "0.3.30" }
log = "0.4.21"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
chrono-tz = { version = "0.8.6", features = ["serde"] }
thiserror = "1.0.57"
dotenv = "0.15.0"
lazy_static = "1.4.0"

[dev-dependencies]
# anyhow = { version = "1.0.80", default-features = true }
